--- a/src/Component/FoundingCardComponent/FoundingCard.css
+++ b/src/Component/FoundingCardComponent/FoundingCard.css
@@ -11,10 +11,6 @@
   src: url("/public//fonts/Visby/VisbyCF-Light.otf") format("truetype");
 }
 
-body {
-  background-color: #01010d;
-}
-
 .FoundingCardLayout {
   display: flex;
   flex-direction: row;
@@ -22,6 +18,7 @@ body {
   justify-content: center;
   gap: 50px;
   margin-top: 80px;
+  margin-bottom: 350px;
 }
 .card {
   background-color: #ffff;
@@ -127,4 +124,33 @@ body {
   line-height: 28px;
   margin-left: 81px;
   margin-right: 81px;
+}
+
+.two-color-text2 {
+  font-family: "Syne";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 60px;
+  line-height: 72px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.two-color-text2 span {
+  background: linear-gradient(92.15deg, #009bd8 0.74%, #01dbad 112.37%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  margin-left: -400px;
+}
+
+.two-color-text2:before {
+  content: "Our Beloved";
+  color: #ffffff;
+}
+.bg {
+  background-image: url("../../Assets/image/Group 265.png"); /* Ganti URL gambar dengan URL gambar yang ingin digunakan */
+  background-position-y: 80px;
+  background-position-x: 180px;
+  background-size: 120%;
 }
