syahdan first commit

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,30 @@
 .App {
   text-align: center;
 }
-
+.circle-container {
+  display: flex;
+  flex-direction: row;
+}
+.circle-1 {
+  width: 407px;
+  height: 507px;
+  border-radius: 50%;
+  background-color: aqua;
+  filter: blur(280px);
+  position: absolute;
+  top: 280px;
+  left: -392px;
+}
+.circle-2 {
+  width: 280px;
+  height: 507px;
+  border-radius: 50%;
+  background-color: aqua;
+  filter: blur(280px);
+  position: absolute;
+  top: 280px;
+  left: 1000px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
