--- a/src/Component/MemberCard/MemberCard.css
+++ b/src/Component/MemberCard/MemberCard.css
@@ -141,7 +141,7 @@ body {
   justify-content: center;
   align-items: center;
 }
-.firstTittle {
+.secTittle {
   font-family: "Visby CF Bold";
   font-style: normal;
   font-weight: 700;
