syahdan final circle

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,14 @@
 .App {
   text-align: center;
 }
-.circle-container {
+.circle-container-left {
+  position: absolute;
+}
+.circle-container-right {
+  position: absolute;
+  justify-content: flex-end;
+  align-items: flex-end;
   display: flex;
-  flex-direction: row;
 }
 .circle-1 {
   width: 407px;
@@ -16,14 +21,14 @@
   left: -392px;
 }
 .circle-2 {
-  width: 280px;
-  height: 507px;
+  width: 285px;
+  height: 407px;
   border-radius: 50%;
   background-color: aqua;
-  filter: blur(280px);
   position: absolute;
-  top: 280px;
+  top: 350px;
   left: 1000px;
+  filter: blur(280px);
 }
 .App-logo {
   height: 40vmin;
